# DaMo

./: LICENSE  README.md  pyproject.toml
DaMo/: get_P_fix.py  mllm_train_and_eval.py  mlp_regeressor.py  predict.py  processed_data_random_50.xlsx
phoneAgentBench/: eval_mt-plan.py
phoneAgentBench/data/evalset/: mt-plan.json
phoneAgentBench/utils/: file_utils.py  instruction_prompt.py  internvl_infer.py  planning_evaluator.py  prompt_mt_plan.py
