[project]
name = "damo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.3.0",
    "decord==0.6.0",
    "einops==0.8.1",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pybind11>=3.0.1",
    "qwen-vl-utils==0.0.8",
    "sentence-transformers>=5.1.1",
    "timm==1.0.15",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.51.3",
]
